--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,26 @@
-.new-div {
-    border-bottom: 1px solid black;
-    height: 20px;
-    width: 20px;
-    display: inline-block;
-    margin: 5px;
-    }
-    
-.guessed {
-    height: 20px;
-    width: 20px;
-    display: inline-block;
-    margin: 5px;
+body {
+    background-color: black;
+    color: white;
+}
+
+.jumbotron {
+    border: 10px dashed white;
+}
+
+#current-word, #count, #win, #empty-div {
+    font-size: 35px;
+    font-family: 'VT323', monospace;
+    letter-spacing: 2px;
+}
+
+h1, h2 {
+    font-family: 'Bangers', cursive;
+}
+
+h1 {
+    letter-spacing: 2px;
+}
+
+h2 {
+    letter-spacing: 4px;
 }
