--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,22 @@ h1 {
 h2 {
     letter-spacing: 4px;
 }
+
+.flashit{
+    color:white;
+      -webkit-animation: flash linear 1s infinite;
+      animation: flash linear 1s infinite;
+      font-size: 35px;
+      font-family: 'VT323', monospace;
+      letter-spacing: 2px;
+  }
+  @-webkit-keyframes flash {
+      0% { opacity: 1; } 
+      50% { opacity: .1; } 
+      100% { opacity: 1; }
+  }
+  @keyframes flash {
+      0% { opacity: 1; } 
+      50% { opacity: .1; } 
+      100% { opacity: 1; }
+  }
